# ipc-broker

./: Architecture.MD  BlockDiagram.md  Cargo.toml  README.md  build.rs
.github/agents/: rust-code-reviewer.md
.github/workflows/: rust.yml
linux/: install.sh
linux/systemd/: ipc-broker.service
src/: activate.rs  broker.rs  client.rs  lib.rs  logger.rs  main.rs  rpc.rs  tests.rs  worker.rs
windows/: install.ps1
