[package]
name = "ipc-broker"
version = "0.1.11"
edition = "2024"
authors = ["Lorenzo Leonardo <enzotechcomputersolutions@gmail.com>"]
license = "MIT"
description = "A lightweight IPC broker for Rust that supports multiple transports (TCP, Unix sockets, Named Pipes) and provides an actor model with message passing and RPC capabilities."
repository = "https://github.com/LorenzoLeonardo/ipc-broker"
homepage = "https://github.com/LorenzoLeonardo/ipc-broker"
documentation = "https://docs.rs/ipc-broker"
readme = "README.md"
default-run = "ipc-broker"

[dependencies]
async-trait = "0.1"
chrono = "0.4"
fern = "0.7"
local-ip-address = "0.6"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal", "time"] }
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0"
ctor = "0.6"
